--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,44 +6,42 @@
         <title>{{ page.title }}</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- syntax highlighting CSS
-        <link rel="stylesheet" href="/css/syntax.css">
--->
 		<link rel="stylesheet" href="/css/bootstrap.min.css">
 		<link rel="stylesheet" href="/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/1.6.4/fullcalendar.css">
-		<link rel="stylesheet" href="/css/main.css">
 
+		<link rel="stylesheet" href="/css/main.css">
     </head>
     <body>
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">{{ site.name }}</a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Home</a></li>
-<li><a href="/events.html">Events</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+		  <div class="container">
+			<div class="navbar-header">
+			  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			  </button>
+			  <a class="navbar-brand" href="/">{{ site.name }}</a>
+			</div>
+			<div class="collapse navbar-collapse">
+			  <ul class="nav navbar-nav">
+				<li class="active"><a href="/">Home</a></li>
+				<li><a href="/events">Events</a></li>
+			  </ul>
+			</div>
+		  </div>
+		</nav>
         <div class="container">
 
           {{ content }}
-</div>
+		</div>
        <div class="container">
           <div class="footer">
             <div class="contact">
               <p>
                 <a href="https://twitter.com/wpgstrengthnfit">twitter.com/wpgstrengthnfit</a><br />
+				<a href="https://www.facebook.com/winnipegstrengthandfitness">facebook.com/winnipegstrengthandfitness</a><br />
 				<a href="mailto:winnipegstrengthandfitness@gmail.com">winnipegstrengthandfitness@gmail.com</a><br />
               </p>
             </div>
