added social buttons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,19 +43,21 @@
 		  </div>
 		</nav>
         <div class="container">
+			<div class="col-md-9">
 
           {{ content }}
-		</div>
-       <div class="container">
-          <div class="footer">
-            <div class="contact">
+		  </div
+
+		  </div>
+
+		  <div class="container">
+        <div class="col-md-3">  
               <p>
-                <a href="https://twitter.com/wpgstrengthnfit">twitter.com/wpgstrengthnfit</a><br />
-				<a href="https://www.facebook.com/winnipegstrengthandfitness">facebook.com/winnipegstrengthandfitness</a><br />
-				<a href="mailto:winnipegstrengthandfitness@gmail.com">winnipegstrengthandfitness@gmail.com</a><br />
+			  <a href="https://www.facebook.com/winnipegstrengthandfitness"><img src="/img/facebook_social_circle.png" alt="Like me on Facebook"/></a>
+                <a href="https://twitter.com/wpgstrengthnfit"><img src="/img/twitter_social_circle.png" alt="Follow me on Twitter"/></a>
+				<a href="mailto:winnipegstrengthandfitness@gmail.com"><img src="/img/mail_social_circle.png" alt="Email me"/></a>
               </p>
-            </div>
-          </div>
+        </div>  
        </div>
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
