--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,7 @@
 			  <ul class="nav navbar-nav">
 				<li class="active"><a href="/">Home</a></li>
 				<li><a href="/events">Events</a></li>
+				<li><a href="/gyms">Gyms</a></li>
 			  </ul>
 			</div>
 		  </div>
