--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,10 @@
 			  <ul class="nav navbar-nav">
 				<li class="active"><a href="/">Home</a></li>
 				<li><a href="/events">Events</a></li>
-				<li><a href="/gyms">Gyms</a></li>
+				<li><a href="/gyms">Gyms/Coaches</a></li>
+				<li><a href="/training">Training</a></li>
+				<li><a href="/nutrition">Nutrition</a></li>
+				<li><a href="/forums">Forum</a></li>
 			  </ul>
 			</div>
 		  </div>
