adding link to actual forum

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
 				<li><a href="/gyms">Gyms/Coaches</a></li>
 				<li><a href="/training">Training</a></li>
 				<li><a href="/nutrition">Nutrition</a></li>
-				<li><a href="/forum">Forum</a></li>
+				<li><a href="http://discourse.winnipegstrengthandfitness.com">Forum</a></li>
 			  </ul>
 			</div>
 		  </div>
