fixed layout and started fleshing out landing page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,14 +47,12 @@
 		  </div>
 		</nav>
         <div class="container">
+		<div class="row">
 			<div class="col-md-9">
 
           {{ content }}
-		  </div
-
 		  </div>
 
-		  <div class="container">
         <div class="col-md-3">  
               <p>
 			  <a href="https://www.facebook.com/winnipegstrengthandfitness"><img src="/img/facebook_social_circle.png" alt="Like me on Facebook"/></a>
@@ -63,6 +61,7 @@
               </p>
         </div>  
        </div>
+	   </div>
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/1.6.4/fullcalendar.min.js"></script>
