--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,7 @@
 				<li class="active"><a href="/">Home</a></li>
 				<li><a href="/events">Events</a></li>
 				<li><a href="/gyms">Gyms/Coaches</a></li>
+				<li><a href="/athletes">Athletes</a></li>
 				<li><a href="/training">Training</a></li>
 				<li><a href="/nutrition">Nutrition</a></li>
 				<li><a href="http://discourse.winnipegstrengthandfitness.com">Forum</a></li>
